--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,13 +7,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Full Stack Demo</title>
+    <title>Ace's eBookstore</title>
 
     <link type="text/css" rel="stylesheet" href="../public/css/style.css" />
   </head>
   <body>
-    <header id="main-header" class="bg-success text-white p-4 mb-3">
-      <h1 id="header-title">Full Stack Demo Tutorial</h1>
+    <header id="main-header" class="bg-header text-white p-2 mb-3 sticky-top">
+      <h1 class='text-center'>Ace's eBookstore</h1>
     </header>
 
     <div class="container">
