--- a/views/readData.ejs
+++ b/views/readData.ejs
@@ -17,8 +17,7 @@
     </header>
 
     <div class="container">
-      <h3>CRUD ops - READ</h3>
-      <h4>Read Data from The Database</h4>
+      <h3>Full Selection of eBooks Ordered By Title</h3>
       <div class="card card-body">
           <table class="table-bordered">
             <tr>
