--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,11 @@
 <body>
   <header id="main-header" class="bg-header text-white p-2 mb-3 sticky-top">
     <h1 class='text-center'>Ace's eBookstore</h1>
+    <div class="media">
+      <h5 class="media-heading text-center">
+        <a href="/">Return to Home Page</a>
+      </h5>
+    </div>
   </header>
 
   <div class="container">
@@ -71,6 +76,15 @@
         <input type="reset" value="RESET" class="btn btn-dark" />
         <br />
       </form>
+      <div>
+        <h3 class="text-center mb-3">Create an Account with Us!</h3>
+        <div class="row">
+          <div class="text-center mb-5">
+            <a href="/signup" action="/signup/" method="get" class="btn btn-info">ACCOUNT CREATION</a>
+            <br />
+          </div>
+        </div>
+      </div>
     </main>
   </div>
 </body>
