--- a/views/readUser.ejs
+++ b/views/readUser.ejs
@@ -13,6 +13,11 @@
 <body>
   <header id="main-header" class="bg-header text-white p-2 mb-3 sticky-top">
     <h1 class='text-center'>Ace's eBookstore</h1>
+    <div class="media">
+      <h5 class="media-heading text-center">
+        <a href="/">Return to Home Page</a>
+      </h5>
+    </div>
   </header>
 
   <div class="container">
@@ -92,4 +97,5 @@
     </div>
   </div>
 </body>
+
 </html>
