--- a/views/addeBook.ejs
+++ b/views/addeBook.ejs
@@ -14,6 +14,11 @@
   <body>
     <header id="main-header" class="bg-header text-white p-2 mb-3 sticky-top">
       <h1 class='text-center'>Ace's eBookstore</h1>
+      <div class="media">
+        <h5 class="media-heading text-center">
+          <a href="/">Return to Home Page</a>
+        </h5>
+      </div>
     </header>
 
     <div class="container">
