--- a/views/addeBook.ejs
+++ b/views/addeBook.ejs
@@ -1,120 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>Ace's eBookstore</title>
 
-    <link type="text/css" rel="stylesheet" href="../public/css/style.css" />
-  </head>
-  <body>
-    <header id="main-header" class="bg-header text-white p-2 mb-3 sticky-top">
-      <h1 class='text-center'>Ace's eBookstore</h1>
-      <div class="media">
-        <h5 class="media-heading text-center">
-          <a href="/">Return to Home Page</a>
-        </h5>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>Ace's eBookstore</title>
 
-    <div class="container">
-      <main>
-        <h2>Create eBook (Really Secret Admin Page)</h2>
-        <div id="main" class="card-body">
-          <form
-            class="form-inline mb-3"
-            action="/insertebook/"
-            method="post"
-            id="EBOOKcreate"
-          >
-            <label for="eBookTitle">Title</label>
-            <input
-              type="text"
-              name="eBookTitle"
-              placeholder="Enter Title"
-              size="255"
-              required
-              autocomplete="off"
-              class="form-control mr-2"
-            />
-            <br />
-            <label for="eBookISBN">ISBN</label>
-            <input
-              type="text"
-              name="eBookISBN"
-              placeholder="Enter ISBN (Form: 000-00-00000-00-0)"
-              size="20"
-              required
-              autocomplete="off"
-              class="form-control mr-2"
-            />
-            <br />
-            <label for="eBookAuthor">Author</label>
-            <input
-              type="text"
-              name="eBookAuthor"
-              placeholder="Enter Author"
-              size="255"
-              required
-              autocomplete="off"
-              class="form-control mr-2"
-            />
-            <br />
-            <label for="eBookGenre">Genre</label>
-            <input
-              type="text"
-              name="eBookGenre"
-              placeholder="Enter Genre"
-              size="255"
-              required
-              autocomplete="off"
-              class="form-control mr-2"
-            />
-            <br />
-            <label for="eBookPrice">Price</label>
-            <input
-              type="number"
-              step="any"
-              name="eBookPrice"
-              placeholder="Enter Price"
-              size="10"
-              required
-              autocomplete="off"
-              class="form-control mr-2"
-            />
-            <br />
-            <label for="eBookDesc">Description</label>
-            <textarea
-              type="text"
-              name="eBookDesc"
-              placeholder="Enter Description"
-              size="20000"
-              required
-              autocomplete="off"
-              class="form-control mr-2"
-              rows="5"
-            ></textarea>
-            <br />
-            <label for="eBookPub">Publication Date</label>
-            <input
-              type="date"
-              name="eBookPub"
-              placeholder="Enter Publication Date"
-              required
-              autocomplete="off"
-              class="form-control mr-2"
-            />
-            <br />
-            <input type="submit" value="SUBMIT" class="btn btn-dark" />
-            <input type="reset" value="RESET" class="btn btn-dark" />
-          </form>
-        </div>
-      </main>
+  <link type="text/css" rel="stylesheet" href="../public/css/style.css" />
+</head>
+
+<body>
+  <header id="main-header" class="bg-header text-white p-2 mb-3 sticky-top">
+    <h1 class='text-center'>Ace's eBookstore</h1>
+    <div class="media">
+      <h5 class="media-heading text-center">
+        <a href="/">Return to Home Page</a>
+      </h5>
     </div>
+  </header>
 
-  </body>
+  <div class="container">
+    <main>
+      <h2>Create eBook (Really Secret Admin Page)</h2>
+      <div id="main" class="card-body">
+        <form class="form-inline mb-3" action="/insertebook/" method="post" id="EBOOKcreate">
+          <label for="eBookTitle">Title</label>
+          <input type="text" name="eBookTitle" placeholder="Enter Title" size="255" required autocomplete="off"
+            class="form-control mr-2" />
+          <br />
+          <label for="eBookISBN">ISBN</label>
+          <input type="text" name="eBookISBN" placeholder="Enter ISBN (Form: 000-00-00000-00-0)" size="20" required
+            autocomplete="off" class="form-control mr-2" />
+          <br />
+          <label for="eBookAuthor">Author</label>
+          <input type="text" name="eBookAuthor" placeholder="Enter Author" size="255" required autocomplete="off"
+            class="form-control mr-2" />
+          <br />
+          <label for="eBookGenre">Genre</label>
+          <input type="text" name="eBookGenre" placeholder="Enter Genre" size="255" required autocomplete="off"
+            class="form-control mr-2" />
+          <br />
+          <label for="eBookPrice">Price</label>
+          <input type="number" step="any" name="eBookPrice" placeholder="Enter Price" size="10" required
+            autocomplete="off" class="form-control mr-2" />
+          <br />
+          <label for="eBookDesc">Description</label>
+          <textarea type="text" name="eBookDesc" placeholder="Enter Description" size="20000" required
+            autocomplete="off" class="form-control mr-2" rows="5"></textarea>
+          <br />
+          <label for="eBookPub">Publication Date</label>
+          <input type="date" name="eBookPub" placeholder="Enter Publication Date" required autocomplete="off"
+            class="form-control mr-2" />
+          <br />
+          <input type="submit" value="SUBMIT" class="btn btn-dark" />
+          <input type="reset" value="RESET" class="btn btn-dark" />
+        </form>
+      </div>
+    </main>
+  </div>
+
+</body>
+
 </html>
