--- a/views/readUser.ejs
+++ b/views/readUser.ejs
@@ -67,8 +67,9 @@
   <div class="container">
     <h3>Update User Information</h3>
     <div class="card card-body">
-      <form class="form-inline mb-3" action="/updateuser/" method="post" id="USERupdate">
-        <%data.forEach((item)=>{%>
+      <%data.forEach((item)=>{%>
+        <br />
+        <form class="form-inline mb-3" action="/updateuser/" method="post" id="USERupdate">
           <!--Using 'required' tag on all fields ensures they will be nonempty upon submission.-->
           <!--ID is marked as 'readonly' with tag so that it will be submitted with form but unchanged.-->
           <label for="userID">ID</label>
@@ -91,9 +92,15 @@
           <input type="date" name="userDOB" placeholder="Enter your Date of Birth" autocomplete="off"
             class="form-control mr-2" required id="userDOB" value="<%=item.USER_DOB.toISOString().split('T')[0]%>" />
           <br />
+          <input type="submit" value="UPDATE" class="btn btn-dark" />
+        </form>
+        <form class="form-inline mb-3" action="/deleteuser/" method="post" id="USERdelete">
+          <input type="hidden" name="userID" placeholder="User ID Here" size="255" autocomplete="off"
+            class="form-control mr-2" required id="userID" readonly="readonly" value="<%=item.USER_ID%>" />
+          <input type="submit" value="DELETE" class="btn btn-danger" />
+          <br />
+          <br />
           <%});%>
-            <input type="submit" value="UPDATE" class="btn btn-dark" />
-      </form>
     </div>
   </div>
 </body>
