--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,6 +85,24 @@
           </div>
         </div>
       </div>
+      <div>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <h4 class="text-center mb-3">Secret Admin Buttons: Use Only if Admin! (Santa will know if you have been
+          naughty.)</h4>
+        <div class="row">
+          <div class="text-center mb-5">
+            <a href="/usersearch" action="/usersearch/" method="get" class="btn btn-success">Admin User Actions</a>
+            <a href="/ebooksearch" action="/ebooksearch/" method="get" class="btn btn-success">Admin eBook Actions</a>
+            <a href="/addebook" action="/addebook/" method="get" class="btn btn-success">Admin Create eBook</a>
+            <br />
+          </div>
+        </div>
+      </div>
+
     </main>
   </div>
 </body>
