--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
       <form class="form-inline mb-3" action="/searchebook/" method="post" id="EBOOKsearch">
         <br />
         <label for="eBookTitleSearch" class="h4">Search eBooks by Title</label>
-        <input type="text" name="eBookTitleSearch" placeholder="Enter eBook Title" required autocomplete="off"
+        <input type="text" name="eBookTitleSearch" placeholder="Enter eBook Title" autocomplete="off"
           class="form-control mr-2" />
         <br />
         <h4>Refine Your Search With Other Filters Here</h4>
